Continued work. Media queries added, additional styles, download link and new sections

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>Martin Dines - Web Developer, London UK</title>
+		<title>CV / Résumé | Martin Dines - Web Developer, London</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
 	<body>
+        <!--
+        <nav>
+            <ul>
+                <li>cv / résumé</li>
+                <li>labs</li>
+            </ul>
+        </nav>
+        -->
 		<header>
 			<h1>Martin Dines</h1>
             <h3>Web Developer<br />London</h3>
@@ -22,6 +30,7 @@
                         <li><a href="mailto:martin.dines@live.co.uk"><i class="icon-envelope-alt"></i>martin.dines@live.co.uk</a></li>
                         <li><a href="http://uk.linkedin.com/in/mdines"><i class="icon-linkedin"></i>linkedin.com/in/mdines</a></li>
                         <li><a href="http://www.twitter.com/_dines"><i class="icon-twitter"></i>@_dines</a></li>
+                        <li class="download"><a href="#"><i class="icon-download-alt"></i>Download Complete CV</a></li>
                     </ol>
                 </div>
                 <div class="full-info">
@@ -72,5 +81,18 @@
                 </div>
 			</div>
 		</section>
+        <section class="experience">
+            <h2>Education</h2>
+            <p>All the education!</p>
+        </section>
+        <section class="experience">
+            <h2>Skills</h2>
+            <p>All the skills!</p>
+        </section>
+        <section class="experience">
+            <h2>References</h2>
+            <p>All the references!</p>
+        </section>
+        <footer></footer>
 	</body>
 </html>
