Skills section (only class name change)

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </li>
             </ul>
         </section>
-        <section class="experience">
+        <section class="skills">
             <h2>Skills</h2>
             <p>All the skills!</p>
         </section>
