--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
                     <span class="duration">April 2012 &ndash; Present</span>
                 </div>
                 <div class="full-info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pharetra vulputate consequat. Aliquam aliquam, quam nec vestibulum laoreet, leo odio sodales enim, in facilisis est massa ac tortor. Etiam elementum ipsum non leo hendrerit euismod in quis ante. Etiam ipsum neque, vehicula quis consequat eget, iaculis ac sem. Integer quis lectus ac nunc pulvinar pretium. Etiam ut urna sit amet justo congue fringilla. Sed malesuada nulla a sagittis dapibus. Suspendisse quis eros nulla. Etiam sit amet ullamcorper orci.</p>
-                    <p>Etiam pretium massa eu mi semper sollicitudin. Pellentesque volutpat et sapien in venenatis. Vestibulum vitae risus sed mauris tincidunt fermentum. Proin dignissim sem vel tortor lacinia aliquet. Nam mattis molestie felis, vel hendrerit tellus volutpat quis. Pellentesque non lectus mauris. Nam id tortor eget eros vestibulum consequat. Quisque a vulputate nisi, consequat posuere nisi. In sed purus eu leo feugiat tempus.</p>
+                    <p>Currently working at GPMD as a Magento / SilverStripe developer I work with a closely knit team who build, support and maintain sites belonging to an impressive client portfolio.</p>
+                    <p>I've taken a keen interest in Magento, specifically module development, and aim to complete the Magento Certified Developer qualification in the upcoming months. I have written bespoke modules for clients to meet their business needs such as - advanced bundle pricing management, automatic product and asset imports, and a reward card/points extension. I am a big fan of contributing to existing modules and have implemented features to the popular SEOPack and Locayta module.</p>
+                    <p>Whilst at GPMD, working with a team of developers on large projects, I've learnt and actively practice project management methodologies including agile and scrum to sure on time, to spec, deliveries.</p>
+                    <p>GPMD and my colleagues are active in the London development community and subsequently I have attended meetups and been fortunate enough to meet some very inspiring people. Its this buzz and energy that drives me as a developer to better my skills, knowledge and career.</p>
                     <div class="additional red">
                         2 Awards 3 Recommendations
                     </div>
@@ -63,7 +65,7 @@
 				</div>
 				<div class="full-info">
                     <p>I joined Impact Media to take over the existing developers entry and become the sole developer. This served as a great opportunity as I was given the freedom to experiment and try new approaches of which some were adopted in to daily business. I took over development of a bespoke inhouse CMS for clients and released multiple iterations with new features. Worked with the team to create award winning sites based on WordPress and wrote custom innovative plugins, such as Amazon S3 integration, which previously did not exist. Bespoke work included creating a web based warehouse tool to manage stock levels, and handle order picking-lists, regularly processing hundreds orders a week.</p>
-                    <p>Whilst at Impact Media I achieved 4 recognised awards (which are available on request) for the creation of their current site (http://www.impactmediadesign.co.uk) a long with client sites.</p>
+                    <p>Whilst at Impact Media I achieved 4 recognised awards (which are available on request) for the creation of their current site a long with multi client sites.</p>
                     <p>I was given a great opportunity at Impact Media and thoroughly enjoyed my time there. It opened my eyes to the web development community which has pushed me towards achieving my goals.</p>
                     <div class="additional blue">
                         <ul class="projects">
