--- a/index.html
+++ b/index.html
@@ -120,7 +120,34 @@
         </section>
         <section class="skills">
             <h2>Skills</h2>
-            <p>All the skills!</p>
+            <p>All the skills! Ok maybe not yet but I'm certainly working towards growing the following lists and pushing myself to expand my knowledge.</p>
+            <div class="col-3">
+                <h3>Backend Development</h3>
+                <ul>
+                    <li>Working Full Stack knowledge</li>
+                    <li>Ability to write clear concise tested PHP OOP code taking security in to account</li>
+                    <li>Design scalable database structures that ensure data is easily managed and accessed</li>
+                    <li>Magento, SilverStripe, and WordPress</li>
+                    <li>Familiar with a range of frameworks:- Sf2, Silex, ZF, CI, Kohana, and Laravel</li>
+                    <li>Huge fan of TDD & BDD practices (especially regression testing!) Using phpspec, PHPUnit and Behat whenever possible</li>
+                    <li><strong>Self confessed documentation buff</strong></li>
+                    <li>Range of tools to aid development - Git (&flow) / SVN, Composer, Modman, Vagrant, Jenkins CI, N98_Magerun</li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <h3>Frontend Development</h3>
+                <ul>
+                    <li>Great knowledge of Javascript and related frameworks / libraries (KnockoutJs, Angular, jQuery & Prototype)</li>
+                    <li>Always pushing towards clean maintainable site structures and CSS using SCSS/Less (Bourbon, Neat, Compass, Bootstrap)</li>
+                    <li>Familiar with frontend automation and build processes such as Grunt and Yeoman</li>
+                    <li>Frontend testing to ensure code quality and functionality - JSLint, JSUnit, Behat, Selenium / Sahi</li>
+                    <li>Keep up to date with the latest local SEO practices</li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <h3>Project Management</h3>
+                <p>Paragraph here explaining how I am venturing in to project management in an agile approach, including speccing with user profiles and stories, planning and estimating work required and then scheduling sprints followed by retrospectives and post mortems</p>
+            </div>
         </section>
         <section class="experience">
             <h2>References</h2>
