Corrected literal errors

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Currently working at GPMD as a Magento / SilverStripe developer I work with a closely knit team who build, support and maintain sites belonging to an impressive client portfolio.</p>
                     <p>I've taken a keen interest in Magento, specifically module development, and aim to complete the Magento Certified Developer qualification in the upcoming months. I have written bespoke modules for clients to meet their business needs such as - advanced bundle pricing management, automatic product and asset imports, and a reward card/points extension. I am a big fan of contributing to existing modules and have implemented features to the popular SEOPack and Locayta module.</p>
                     <p>Whilst at GPMD, working with a team of developers on large projects, I've learnt and actively practice project management methodologies including agile and scrum to sure on time, to spec, deliveries.</p>
-                    <p>GPMD and my colleagues are active in the London development community and subsequently I have attended meetups and been fortunate enough to meet some very inspiring people. Its this buzz and energy that drives me as a developer to better my skills, knowledge and career.</p>
+                    <p>GPMD and my colleagues are active in the London development community and subsequently I have attended meetups and been fortunate enough to meet some very inspiring people. It's this buzz and energy that drives me as a developer to better my skills, knowledge and career.</p>
                     <div class="additional red">
                         <span>View Projects <sup>coming soon</sup></span>
                     </div>
@@ -139,7 +139,7 @@
             </div>
             <div class="col-3">
                 <h3>Project / Team Management</h3>
-                <p>I have recently become interested in project and team management. As a developer I feel I have a good understanding of what does and doesn't work when managing the development of a project. This is something I wish to build on and perhaps venture into in the future.</p>
+                <p>I have recently become interested in project and team management. As a developer I feel I have a good understanding of what does and doesn't work when managing the development of a project. This is something I wish to build on and perhaps venture in to in the future.</p>
                 <p>Writing user stories, feature specifications, planning, and estimating are all areas I have experience in. I've been working as part of a team practicing a hybrid agile approach to management including SCRUM and MoSCoW.</p>
             </div>
         </section>
