onscroll doesn't work to well on touch devices (event fired on scroll finish) and I cant find a way to reliably detect touch only devices... So removing the effect when the browser window < 831

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             hasReachedBottom = true;
                         }
                     }
-                    if (window.scrollY >= 0) {
+                    if (window.innerWidth > 830 && window.scrollY >= 0) {
                         headerElem.style.backgroundPosition = '50% ' + (50 - (window.scrollY / 10)) + "%";
                         headerElem.style.opacity = 1 - ((window.scrollY - 170) / 170);
                     }
