--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                     if (window.innerWidth > 830 && window.scrollY >= 0) {
                         headerElem.style.backgroundPosition = '50% ' + (50 - (window.scrollY / 10)) + "%";
                         headerElem.style.opacity = 1 - ((window.scrollY - 170) / 170);
+                    } else {
+                        headerElem.style.backgroundPosition = '50% 50%';
+                        headerElem.style.opacity = 1;
                     }
                 }
             </script>
