WIP nav concept

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li>cv / résumé</li>
+                <li>magento modules</li>
                 <li>labs</li>
             </ul>
         </nav>
