Updated copy to include Magento Certification

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<title>CV / Résumé | Martin Dines - Web Developer, London</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-        <meta name="description" content="Curriculum vitae of Martin Dines - Magento / PHP Developer based in London">
+        <meta name="description" content="Curriculum vitae of Martin Dines - Certified Magento / PHP Developer based in London">
 
 		<link rel="stylesheet" href="assets/css/main.css">
 	</head>
@@ -35,8 +35,8 @@
                     </ol>
                 </div>
                 <div class="full-info">
-                    <p>I am a young, highly motivated, Web Developer with a passion for creating web based applications that are simple and intuitive to use. I get a kick out of contributing to open source projects and giving back to the community that has served me so well. I enjoy the challenge of solving problems and am confident working with new concepts, methods, and techniques when required.</p>
-                    <p>I am constantly looking for the next challenge and ways that I can push myself to improve my knowledge as a Web Developer. I aim to make a great addition to any team and thrive off the enthusiasm and passion of others.</p>
+                    <p>I am a young, highly motivated, Web Developer with a passion for creating web based applications that are simple and intuitive to use. I get a kick out of contributing to open source projects and giving back to the community. I enjoy the challenge of solving problems and am confident working with new concepts, methods, and techniques when required.</p>
+                    <p>I am constantly looking for the next challenge and ways that I can push myself to improve my knowledge as a Web Developer. I recently became a <b>Certified Magento Developer</b> and plan take the <i>MCD Plus</i> exam in the near future. I aim to make a great addition to any team and thrive off the enthusiasm and passion of others.</p>
                 </div>
             </div>
         </section>
